add_subdirectory(8VC-Venture-Cup-2016-Final-Round)
add_subdirectory(8VC-Venture-Cup-2017-Elimination-Round)
add_subdirectory(Codeforces-Global-Round-19)
add_subdirectory(Codeforces-Round-217)
add_subdirectory(Codeforces-Round-267)
add_subdirectory(Codeforces-Round-285)
add_subdirectory(Codeforces-Round-297)
add_subdirectory(Codeforces-Round-299)
add_subdirectory(Codeforces-Round-331)
add_subdirectory(Codeforces-Round-349)
add_subdirectory(Codeforces-Round-366)
add_subdirectory(Codeforces-Round-375)
add_subdirectory(Codeforces-Round-382)
add_subdirectory(Codeforces-Round-429)
add_subdirectory(Codeforces-Round-451)
add_subdirectory(Codeforces-Round-530)
add_subdirectory(Codeforces-Round-627)
add_subdirectory(Codeforces-Round-644)
add_subdirectory(Codeforces-Round-763)
add_subdirectory(Codeforces-Round-764)
add_subdirectory(Codeforces-Round-809)
add_subdirectory(Codeforces-Round-834)
add_subdirectory(Codeforces-Round-851)
add_subdirectory(Codeforces-Round-871)
add_subdirectory(Codeforces-Round-873)
add_subdirectory(Codeforces-Round-896)
add_subdirectory(Codeforces-Round-904)
add_subdirectory(Codeforces-Round-914)
add_subdirectory(Codeforces-Round-915)
add_subdirectory(Educational-Codeforces-Round-70)
add_subdirectory(Educational-Codeforces-Round-80)
add_subdirectory(Educational-Codeforces-Round-107)
add_subdirectory(Educational-Codeforces-Round-114)
add_subdirectory(Lyft-Level-5-Challenge-2018-Elimination-Round)
