# P1387 最大正方形
# https://www.luogu.com.cn/problem/P1387
# 二维前缀和
add_executable(Luogu-P1387 P1387.cpp)

# P2280 [HNOI2003] 激光炸弹
# https://www.luogu.com.cn/problem/P2280
# 二维前缀和
add_executable(Luogu-P2280 P2280.cpp)

# P3397 地毯
# https://www.luogu.com.cn/problem/P3397
# 二维差分
add_executable(Luogu-P3397 P3397.cpp)