# AtCoder Beginner Contest 340
# https://atcoder.jp/contests/abc340

add_executable(AtCoder-ABC340A A.cpp)
add_executable(AtCoder-ABC340B B.cpp)
add_executable(AtCoder-ABC340C C.cpp)
add_executable(AtCoder-ABC340D D.cpp)
add_executable(AtCoder-ABC340E E.cpp)
add_executable(AtCoder-ABC340F F.cpp)
add_executable(AtCoder-ABC340G G.cpp)