# AtCoder Beginner Contest 341
# https://atcoder.jp/contests/abc341

add_executable(AtCoder-ABC341A A.cpp)
add_executable(AtCoder-ABC341B B.cpp)
add_executable(AtCoder-ABC341C C.cpp)
add_executable(AtCoder-ABC341D D.cpp)
add_executable(AtCoder-ABC341E E.cpp)
add_executable(AtCoder-ABC341F F.cpp)
add_executable(AtCoder-ABC341G G.cpp)