# AtCoder Beginner Contest 342
# https://atcoder.jp/contests/abc342

add_executable(AtCoder-ABC342A A.cpp)
add_executable(AtCoder-ABC342B B.cpp)
add_executable(AtCoder-ABC342C C.cpp)
add_executable(AtCoder-ABC342D D.cpp)
add_executable(AtCoder-ABC342E E.cpp)
add_executable(AtCoder-ABC342F F.cpp)
add_executable(AtCoder-ABC342G G.cpp)