# AtCoder Beginner Contest 344
# https://atcoder.jp/contests/abc344

add_executable(AtCoder-ABC344A A.cpp)
add_executable(AtCoder-ABC344B B.cpp)
add_executable(AtCoder-ABC344C C.cpp)
add_executable(AtCoder-ABC344D D.cpp)
add_executable(AtCoder-ABC344E E.cpp)
add_executable(AtCoder-ABC344F F.cpp)
add_executable(AtCoder-ABC344G G.cpp)