# https://codeforces.com/contests/1933

add_executable(Codeforces-1933A A.cpp)
add_executable(Codeforces-1933B B.cpp)
add_executable(Codeforces-1933C C.cpp)
add_executable(Codeforces-1933D D.cpp)
add_executable(Codeforces-1933E E.cpp)
add_executable(Codeforces-1933F F.cpp)
add_executable(Codeforces-1933G G.cpp)