# https://codeforces.com/contest/1941

add_executable(Codeforces-1941A A.cpp)
add_executable(Codeforces-1941B B.cpp)
add_executable(Codeforces-1941C C.cpp)
add_executable(Codeforces-1941D D.cpp)
add_executable(Codeforces-1941E E.cpp)
add_executable(Codeforces-1941F F.cpp)
add_executable(Codeforces-1941G G.cpp)
